Added backend services for register user and login user.

--- a/app/frontend/src/main/webapp/index.html
+++ b/app/frontend/src/main/webapp/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html ng-app="consumeHelloWorld">
+<html ng-app="yatolApp">
 
 <head>
 <meta charset="UTF-8">
 <title>Create new task</title>
+
 <script
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
-<script src="consumeHelloWorld.js"></script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
+<script src="app.js">
+  
+</script>
+<script src="controllers.js">
+</script>
+
 </head>
 
 <body>
-	<div ng-controller="HelloWorldController as hwc">
-		<p>Calling webservice {{bla}}</p>
-	</div>
+	<div ng-view></div>
 </body>
 </html>
