Frontend implementation for login and register
* User can login when registered
* User is directly login after register
* devContainer created via gradle (task)

--- a/app/frontend/src/main/webapp/index.html
+++ b/app/frontend/src/main/webapp/index.html
@@ -6,14 +6,15 @@
 <title>Create new task</title>
 
 <script
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
+	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
 <script
 	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
-<script src="app.js">
-  
-</script>
-<script src="controllers.js">
-</script>
+<script
+	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-resource.js"></script>
+
+<script src="app.js"></script>
+<script src="services.js"></script>
+<script src="controllers.js"></script>
 
 </head>
 
